// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider should render a default slider with proper required props 1`] = `
<div
  className="slider"
  style={
    Object {
      "--terra-slider-progress-status": "30%",
    }
  }
>
  <span
    className="label"
  >
    testLabel
  </span>
  <span
    className="slider-label"
  >
    0
  </span>
  <input
    aria-label="testLabel"
    className="input-range"
    disabled={false}
    max={100}
    min={0}
    onChange={[Function]}
    type="range"
    value={30}
  />
  <span
    className="slider-label slider-max-label"
  >
    100
  </span>
</div>
`;

exports[`Slider should render a disabled slider 1`] = `
<div
  className="slider"
  style={
    Object {
      "--terra-slider-progress-status": "50%",
    }
  }
>
  <span
    className="label"
  >
    testLabel
  </span>
  <span
    className="slider-label"
  >
    0
  </span>
  <input
    aria-label="testLabel"
    className="input-range"
    disabled={true}
    max={100}
    min={0}
    onChange={[Function]}
    type="range"
    value={50}
  />
  <span
    className="slider-label slider-max-label"
  >
    100
  </span>
</div>
`;

exports[`Slider should render a slider with custom min and max labels 1`] = `
<div
  className="slider"
  style={
    Object {
      "--terra-slider-progress-status": "50%",
    }
  }
>
  <span
    className="label"
  >
    testLabel
  </span>
  <span
    className="slider-label"
  >
    testMinimumLabel
  </span>
  <input
    aria-label="testLabel"
    className="input-range"
    disabled={false}
    max={100}
    min={0}
    onChange={[Function]}
    type="range"
    value={50}
  />
  <span
    className="slider-label slider-max-label"
  >
    testMaximumLabel
  </span>
</div>
`;

exports[`Slider should trigger onChange callback on click 1`] = `
<div
  className="slider"
  style={
    Object {
      "--terra-slider-progress-status": "50%",
    }
  }
>
  <span
    className="label"
  >
    testLabel
  </span>
  <span
    className="slider-label"
  >
    0
  </span>
  <input
    aria-label="testLabel"
    className="input-range"
    disabled={true}
    max={100}
    min={0}
    onChange={[Function]}
    type="range"
    value={50}
  />
  <span
    className="slider-label slider-max-label"
  >
    100
  </span>
</div>
`;
